# agent-memory-loop

./: .gitignore  README.md  pyproject.toml  readme-new.md  update-readme.sh
agent_memory_loop/: __init__.py  cli.py  consolidation.py  context_windows.py  daily_notes.py  readme_updater.py  state.py
examples/: brain.yaml  consolidation-prompt.md  generate-context-window.sh  memory-example.md  state-sweep.sh  state.example.json
tests/: test_context_windows.py  test_readme_updater.py  test_state.py
